# Siaod

./: README.md  gitignore.txt
siaod_pr51/: CMakeLists.txt  main.cpp
siaod_pr52/: CMakeLists.txt  main.cpp
siaod_pr61/: CMakeLists.txt  hash.cpp  hash.hpp  main.cpp
siaod_pr62/: CMakeLists.txt  main.cpp
siaod_pr71/: AVLTree.cpp  CMakeLists.txt  main.cpp
siaod_pr72/: CMakeLists.txt  main.cpp
siaod_pr81/: CMakeLists.txt  main.cpp
siaod_pr81/1/: Fano.cpp  Fano1.h  LZ77.cpp  LZ78.cpp  Tree.h  main1.cpp  main1.h
siaod_pr81/2/: Fano2.cpp  Fano2.h  Huffman.cpp  Huffman.h  main2.cpp  main2.h
siaod_pr82/: main_branch_border.cpp  main_head_on.cpp
